# hosts3d

./: .gitattributes  .gitignore  .markdownlint.json  BUILDINGNOTES.txt  CHANGELOG.md  CODEX-HANDOVER.md  CREDITS.md  ChangeLog  Makefile.in  POWERSHELL_SNIPPETS.md  README-runtime-linux.md  README-runtime-windows.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_1.15.md  RELEASE_NOTES_1.16.md  RELEASE_NOTES_1.17.md  RELEASE_NOTES_1.18.md  Todos.md  aclocal.m4  compile-all-windows.bat  compile-hosts3d  compile-hosts3d.bat  compile-hsen  compile-hsen.bat  compile-mac-hosts3d  compile-net-snmp-windows.bat  config.h.in  configure  configure.ac  package-all-windows.bat  package-release-linux  package-release-windows.bat  scalance_xr328_snmp_mirroring_abfrage.md  start-Hosts3DW.bat  start-hsenW.bat  start-hsenW.local.example.bat
Release/windows/x86/hsd-data/: 0network.hnl  controls.txt  netpos.txt  settings-hsd
Tools/: Find-InvalidTextBytes.ps1  Repair-InvalidTextBytes.ps1
man/: Makefile.in  hosts3d.1  hsen.1
scripts/: run-clang-tidy-sarif.ps1  scalance_xr328_mirror_check.py
src/: Makefile.am  Makefile.in  common.h  glfw_compat.h  glwin.cpp  glwin.h  hosts3d.cpp  hosts3d.rc  hsen.cpp  hsen.rc  llist.cpp  llist.h  misc.cpp  misc.h  objects.cpp  objects.h  proto.cpp  proto.h  version.h
testing/: README.md  demo-hsen.ps1  demo-hsen.py  sim-hsen.ps1  sim-hsen.py
